fixed decimal numbers sizes

--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 145,
    "source": [
     "def adjusted_cosine_similarity(rating1, rating2):\r\n",
     "    from math import sqrt\r\n",
@@ -223,15 +223,14 @@
     "        if(pd.isnull(rating1[i]) or pd.isnull(rating2[i])):\r\n",
     "            continue\r\n",
     "\r\n",
-    "        u1 = rating1[i]\r\n",
-    "        u2 = rating2[i]\r\n",
-    "        # print(u1, u2)\r\n",
-    "        totMulSum += u1*u2\r\n",
-    "        r1sqr += u1**2\r\n",
-    "        r2sqr += u2**2\r\n",
-    "\r\n",
+    "        i1 = round(rating1[i], 2)\r\n",
+    "        i2 = round(rating2[i], 2)\r\n",
+    "        totMulSum = totMulSum + (i1*i2)\r\n",
+    "        r1sqr += i1**2\r\n",
+    "        r2sqr += i2**2\r\n",
+    "    # print(totMulSum)\r\n",
     "    # print(sqrt(r1sqr), sqrt(r2sqr))\r\n",
-    "    cosine = totMulSum/(sqrt(r1sqr)*sqrt(r2sqr))\r\n",
+    "    cosine = totMulSum/( round(sqrt(r1sqr),2)*round(sqrt(r2sqr),2))\r\n",
     "\r\n",
     "    return cosine\r\n",
     "    "
@@ -241,29 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "source": [
-    "rating_matrix.columns.array"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<PandasArray>\n",
-       "['item1', 'item2', 'item3', 'item4', 'item5', 'item6']\n",
-       "Length: 6, dtype: object"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 107
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 147,
    "source": [
     "# %%timeit -n 100\r\n",
     "def get_similarity_matrix(rating_matrix):\r\n",
@@ -275,6 +252,12 @@
     "        for j in range(len(adjusted_ratings)):\r\n",
     "            similarity_matrix[i][j] = adjusted_cosine_similarity(adjusted_ratings.iloc[:,i],\\\r\n",
     "                                                                    adjusted_ratings.iloc[:,j])\r\n",
+    "\r\n",
+    "        #     print(adjusted_cosine_similarity(adjusted_ratings.iloc[:,0],\\\r\n",
+    "        #                                                             adjusted_ratings.iloc[:,1]))\r\n",
+    "\r\n",
+    "        #     break\r\n",
+    "        # break\r\n",
     "\r\n",
     "    similarity_matrix.columns = rating_matrix.columns\r\n",
     "    similarity_matrix.index = rating_matrix.columns\r\n",
@@ -288,12 +271,12 @@
      "data": {
       "text/plain": [
        "      item1 item2 item3 item4 item5 item6\n",
-       "item1   1.0  0.02   1.0  -0.4 -0.82 -0.76\n",
-       "item2  0.02   1.0 -0.04  0.58 -0.45 -0.44\n",
-       "item3   1.0 -0.04   1.0 -0.16 -0.87 -0.81\n",
-       "item4  -0.4  0.58 -0.16   1.0  0.07  -0.2\n",
-       "item5 -0.82 -0.45 -0.87  0.07   1.0  0.96\n",
-       "item6 -0.76 -0.44 -0.81  -0.2  0.96   1.0"
+       "item1   1.0  0.02   1.0 -0.41 -0.82 -0.76\n",
+       "item2  0.02   1.0 -0.04  0.58 -0.44 -0.43\n",
+       "item3   1.0 -0.04   1.0 -0.17 -0.87 -0.81\n",
+       "item4 -0.41  0.58 -0.17   1.0  0.07  -0.2\n",
+       "item5 -0.82 -0.44 -0.87  0.07   1.0  0.96\n",
+       "item6 -0.76 -0.43 -0.81  -0.2  0.96   1.0"
       ],
       "text/html": [
        "<div>\n",
@@ -328,7 +311,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.02</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-0.4</td>\n",
+       "      <td>-0.41</td>\n",
        "      <td>-0.82</td>\n",
        "      <td>-0.76</td>\n",
        "    </tr>\n",
@@ -338,23 +321,23 @@
        "      <td>1.0</td>\n",
        "      <td>-0.04</td>\n",
        "      <td>0.58</td>\n",
-       "      <td>-0.45</td>\n",
        "      <td>-0.44</td>\n",
+       "      <td>-0.43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>item3</th>\n",
        "      <td>1.0</td>\n",
        "      <td>-0.04</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-0.16</td>\n",
+       "      <td>-0.17</td>\n",
        "      <td>-0.87</td>\n",
        "      <td>-0.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>item4</th>\n",
-       "      <td>-0.4</td>\n",
+       "      <td>-0.41</td>\n",
        "      <td>0.58</td>\n",
-       "      <td>-0.16</td>\n",
+       "      <td>-0.17</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.07</td>\n",
        "      <td>-0.2</td>\n",
@@ -362,7 +345,7 @@
        "    <tr>\n",
        "      <th>item5</th>\n",
        "      <td>-0.82</td>\n",
-       "      <td>-0.45</td>\n",
+       "      <td>-0.44</td>\n",
        "      <td>-0.87</td>\n",
        "      <td>0.07</td>\n",
        "      <td>1.0</td>\n",
@@ -371,7 +354,7 @@
        "    <tr>\n",
        "      <th>item6</th>\n",
        "      <td>-0.76</td>\n",
-       "      <td>-0.44</td>\n",
+       "      <td>-0.43</td>\n",
        "      <td>-0.81</td>\n",
        "      <td>-0.2</td>\n",
        "      <td>0.96</td>\n",
@@ -383,16 +366,29 @@
       ]
      },
      "metadata": {},
-     "execution_count": 113
+     "execution_count": 147
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 127,
+   "source": [
+    "# (2.2*0.2)+(0.6*-0.4)+(2.33*-0.67)+(0.4*2.4)+(-0.33*-0.3)+(-1.33*-0.3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.09689999999999999"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 127
+    }
+   ],
    "metadata": {}
   },
   {
