rating calculation details

--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 151,
    "source": [
     "# %%timeit -n 100\r\n",
     "def get_similarity_matrix(rating_matrix):\r\n",
@@ -366,28 +366,55 @@
       ]
      },
      "metadata": {},
-     "execution_count": 147
+     "execution_count": 151
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 127,
+   "cell_type": "markdown",
    "source": [
-    "# (2.2*0.2)+(0.6*-0.4)+(2.33*-0.67)+(0.4*2.4)+(-0.33*-0.3)+(-1.33*-0.3)"
+    "The above similarity matrix indicates how the items are similar to each other based on the rating they received from the users.\r\n",
+    "\r\n",
+    "* according to the table item1 and item3 seems to be very similar in terms of user ratings.\r\n",
+    "* similarly item3 seems to be extremely different from the item5 as well.\r\n",
+    "\r\n",
+    "similarity close to zero gives a neither simialar nor different like idea.\r\n",
+    "\r\n",
+    "This method has few problems. Namely when the items which are rated very few times may cause issues. Also having many items to compare may also cause the similarity values to be less meaningfull when normalizing."
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "0.09689999999999999"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 127
-    }
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "To reduce the computational complexity of having large number of items and to improve the overall recommendations we can use `Neighbourhood Selection` techniques.\r\n",
+    "\r\n",
+    "1. __Clustering__ - Using clustering algorithms to identify the neighbourhoods.\r\n",
+    "2. __Top N__ - Defining a parameter as a number of neighbours that need to consider. (not a good method)\r\n",
+    "3. __Threshold__ - Instead of just defining a number of neighbour parameter, we additionally define some kind of standard to keep the similarity in check.\r\n",
+    "\r\n",
+    ">In the above similarity matrix, if we consider the top 2 values as neighbourhood for the item1, output would be (item2, item3) as the recommendation. But if we consider a additional threshold of 0.5 to keep the recommendation quality, we can only get the item3 as the recommendation."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Once we find similar items, we can calculate the rating predictions for them based on 2 main methods.\r\n",
+    "- Regression --> finding average of rating across similar items.\r\n",
+    "- Classification --> getting the most received type of rating for similar items.\r\n",
+    "\r\n",
+    "<center><image src=\"./images/Rating prediction.jpg\" width=\"500px\" /></center>\r\n",
+    "\r\n",
+    "By using the above formula we can predict the rating a user would give to an item based on the neighbourhood items which was also rated by the user."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In practice above codes would be really slow to therefore we can use matrix based implementation for the initial similarity matrix calculation"
    ],
    "metadata": {}
   },
