online prediction (inference) part

--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -414,8 +414,236 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In practice above codes would be really slow to therefore we can use matrix based implementation for the initial similarity matrix calculation"
+    "In practice above codes would be really slow. Therefore we can use matrix based implementation for the initial similarity matrix calculation"
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    ">## Offline Data Processing --> Similarity Matrix calculation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "import pandas as pd\r\n",
+    "import numpy as np\r\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\r\n",
+    "from scipy.sparse import coo_matrix"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "# Function to normalize the rating per user (x is a grouped dataframe)\r\n",
+    "def normalize(x):\r\n",
+    "    x = x.astype(float)\r\n",
+    "    x_sum = x.sum()\r\n",
+    "    x_num = x.astype(bool).sum()\r\n",
+    "    x_mean = x_sum / x_num\r\n",
+    "    if x.std() == 0:\r\n",
+    "        return 0.0\r\n",
+    "    return (x - x_mean) / (x.max() - x.min())"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
+    "# Assume that the ratings is a dataframe with  columns (userid, movieid, rating, normalized_rating)\r\n",
+    "def calculateSimilarityMatrix(ratings, min_similarity = 0.5, min_overlap=0.2):\r\n",
+    "\r\n",
+    "    # Building the sparse matrix with row->movieid, column->userid and values->normalized_rating\r\n",
+    "    sparse_ratings = coo_matrix((ratings['avg'].astype(float),\r\n",
+    "                    (ratings['movie_id'].cat.codes, ratings['user_id'].cat.codes)))\r\n",
+    "\r\n",
+    "    # Overlapping matrix to identify the how rows overlap with eachother.\r\n",
+    "    overlap_matrix = sparse_ratings.astype(bool).astype(int)\\\r\n",
+    "                        .dot(sparse_ratings.transpose().astype(bool).astype(int))\r\n",
+    "\r\n",
+    "    similarity_matrix = cosine_similarity(sparse_ratings, dense_output=False)\r\n",
+    "\r\n",
+    "    # Elementwise multiplication with a boolean matrix for filtering results\r\n",
+    "    similarity_matrix = similarity_matrix.multiply(similarity_matrix > min_similarity) \r\n",
+    "    similarity_matrix = similarity_matrix.multiply(overlap_matrix > min_overlap)\r\n",
+    "\r\n",
+    "    return similarity_matrix\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The confusing part is the overlapping matrix. It is used to identify the number of overlapping users per considering 2 items. The data transformation to boolean helps to get the count.\r\n",
+    "\r\n",
+    "Following rough code segments show the innerworking of the above function."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "#                        Movie Rating       movieid        userid\r\n",
+    "temp = coo_matrix(([3.0,2.0,1.0,4.0,5.0], ([1,1,2,2,5], [6,7,6,9,6])))\r\n",
+    "print(temp)\r\n",
+    "print()\r\n",
+    "cor = cosine_similarity(temp, dense_output=False)\r\n",
+    "print(cor)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  (1, 6)\t3.0\n",
+      "  (1, 7)\t2.0\n",
+      "  (2, 6)\t1.0\n",
+      "  (2, 9)\t4.0\n",
+      "  (5, 6)\t5.0\n",
+      "\n",
+      "  (1, 5)\t0.8320502943378437\n",
+      "  (1, 2)\t0.20180183819889375\n",
+      "  (1, 1)\t1.0\n",
+      "  (2, 5)\t0.24253562503633297\n",
+      "  (2, 2)\t1.0\n",
+      "  (2, 1)\t0.20180183819889375\n",
+      "  (5, 5)\t1.0\n",
+      "  (5, 2)\t0.24253562503633297\n",
+      "  (5, 1)\t0.8320502943378437\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "source": [
+    "overlap_matrix = temp.astype(bool).astype(int)\\\r\n",
+    "                    .dot(temp.transpose().astype(bool).astype(int))\r\n",
+    "print(overlap_matrix)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "  (1, 5)\t1\n",
+      "  (1, 2)\t1\n",
+      "  (1, 1)\t2\n",
+      "  (2, 5)\t1\n",
+      "  (2, 2)\t2\n",
+      "  (2, 1)\t1\n",
+      "  (5, 5)\t1\n",
+      "  (5, 2)\t1\n",
+      "  (5, 1)\t1\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    ">## Online Data Processing --> For users, predict movies based on ratings"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "In this part, recommendations would go to users(the inference) based on the previously calculated similarity matrix."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "def recommend_items(active_user_items):\r\n",
+    "    '''\r\n",
+    "    active_user_items -> is a dictionary with item_id to user rating mapping\r\n",
+    "    '''\r\n",
+    "\r\n",
+    "    mean_user_item_rating = sum(active_user_items.values())/len(active_user_items)\r\n",
+    "\r\n",
+    "    '''\r\n",
+    "    # Below part is Psuedo code. Ideally should connect to database and\r\n",
+    "    #    get the saved similarity matrix data from there.\r\n",
+    "\r\n",
+    "    #  Table schema  userid, target, source, rating\r\n",
+    "    #  Here target and source are corresponding row and column items in similarity matrix)\r\n",
+    "    \r\n",
+    "    candidate_items = Similarity_Matrix_DB_Table(('source' is in user_rated_items) \\\r\n",
+    "                                & not ('target' is in user_rated_items))\r\n",
+    "    candidate_items = candidate_items.order_by('-similarity') # Can limit this to a predefined number\r\n",
+    "    '''\r\n",
+    "    candidate_items = [] # Defining empty list to make the code runnable\r\n",
+    "\r\n",
+    "    recommendations = {}\r\n",
+    "\r\n",
+    "    for item in candidate_items:\r\n",
+    "        item_id = item.target\r\n",
+    "        \r\n",
+    "        related_items = [i for i in candidate_items if i.target==item_id]\r\n",
+    "\r\n",
+    "        # Consider only if related number of items greater than 1\r\n",
+    "        if(len(related_items)>1):\r\n",
+    "            sim_sum = 0\r\n",
+    "            pre = 0\r\n",
+    "            for sim_item in related_items:\r\n",
+    "                r = active_user_items[sim_item] - mean_user_item_rating\r\n",
+    "                pre += sim_item.similarity * r\r\n",
+    "                sim_sum += sim_item.similarity\r\n",
+    "                if sim_sum > 0:\r\n",
+    "                    recs[item_id] = {'prediction': (user_mean + (pre / sim_sum)),\r\n",
+    "                                     'sim_items': [r.source for r in related_items]}\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "    sorted_items = sorted(recs.items(), key=lambda item: -float(item[1]['prediction']))\r\n",
+    "\r\n",
+    "    return sorted_items"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Note in above candidate_items is a list of items which were fitered based on the items already rated by the active user. Which means this contains items very similar to the items rated by the active user based on previously calculated similarity matrix."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
