evaluation methods initial

--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -626,38 +626,30 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    ">## Pros and Cons of Collabarative Filtering"
+   ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "cell_type": "markdown",
+   "source": [
+    "### Cons\r\n",
+    "- Sparcity - one of the main proble,s\r\n",
+    "- Gray Sheep problem - Users with bizzare tastes\r\n",
+    "- Number of ratings - need of having considerable num of rating beforehand, otherwise Cold start problem\r\n",
+    "- Similarity - Bias for popular items due to massive ratings.\r\n",
+    "\r\n",
+    "### Pros\r\n",
+    "- Content agnostic - No need to have extra meta data to get recommendations.\r\n",
+    "- More user centric recommendations"
+   ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
