--- a/Collaborative Filtering.ipynb
+++ b/Collaborative Filtering.ipynb
@@ -606,12 +606,12 @@
     "                pre += sim_item.similarity * r\r\n",
     "                sim_sum += sim_item.similarity\r\n",
     "                if sim_sum > 0:\r\n",
-    "                    recs[item_id] = {'prediction': (user_mean + (pre / sim_sum)),\r\n",
+    "                    recommendations[item_id] = {'prediction': (mean_user_item_rating + (pre / sim_sum)),\r\n",
     "                                     'sim_items': [r.source for r in related_items]}\r\n",
     "\r\n",
     "\r\n",
     "\r\n",
-    "    sorted_items = sorted(recs.items(), key=lambda item: -float(item[1]['prediction']))\r\n",
+    "    sorted_items = sorted(recommendations.items(), key=lambda item: -float(item[1]['prediction']))\r\n",
     "\r\n",
     "    return sorted_items"
    ],
