--- a/Content based Filtering.ipynb
+++ b/Content based Filtering.ipynb
@@ -82,22 +82,121 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## TF IDF Implementation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "source": [
+    "from collections import Counter, defaultdict\r\n",
+    "import math\r\n",
+    "\r\n",
+    "def tf_idf(documents):\r\n",
+    "\r\n",
+    "    document_tfs = []\r\n",
+    "    token_counter = defaultdict(lambda:0)\r\n",
+    "\r\n",
+    "    for document in documents:\r\n",
+    "        tokens = document.split(\" \")\r\n",
+    "        counts = Counter(tokens)\r\n",
+    "\r\n",
+    "        for token in set(tokens):\r\n",
+    "            token_counter[token] += 1\r\n",
+    "        document_tfs.append(counts)\r\n",
+    "\r\n",
+    "\r\n",
+    "    base_vector = list(token_counter.keys())    \r\n",
+    "    document_vectors = []\r\n",
+    "    for doc in document_tfs:\r\n",
+    "        vec = []\r\n",
+    "        for key in base_vector:\r\n",
+    "            tf = (doc[key]/sum(doc.values()))\r\n",
+    "            idf = math.log(len(documents)/(token_counter[key]))\r\n",
+    "            vec.append(tf*idf)\r\n",
+    "        document_vectors.append(vec)\r\n",
+    "\r\n",
+    "    return document_vectors\r\n",
+    "\r\n",
+    "\r\n",
+    "tf_idf([\"my name is dilan\", \"my name is dinushka\", \"I suck at statistics.\", \"I love my dog\"])"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[[0.34657359027997264,\n",
+       "  0.17328679513998632,\n",
+       "  0.17328679513998632,\n",
+       "  0.07192051811294521,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  0.17328679513998632,\n",
+       "  0.17328679513998632,\n",
+       "  0.07192051811294521,\n",
+       "  0.34657359027997264,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.34657359027997264,\n",
+       "  0.34657359027997264,\n",
+       "  0.17328679513998632,\n",
+       "  0.34657359027997264,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.07192051811294521,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.17328679513998632,\n",
+       "  0.0,\n",
+       "  0.34657359027997264,\n",
+       "  0.34657359027997264]]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    ">### TF IDF is meant to be used in applications where we know the inputs beforehand. As you can see we need to have the total counts in all the documents to get the IDF value. Also once we add a new document with overlapping tokens with other documents, it causes their idf values to change."
+   ],
    "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "source": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## LDA Implementation\r\n",
+    "\r\n",
+    "Based on the following 2 youtube videos regarging the theory of LDA.\r\n",
+    "\r\n",
+    "1. [First Video](https://www.youtube.com/watch?v=T05t-SqKArY)\r\n",
+    "2. [Second Video](https://www.youtube.com/watch?v=BaM1uiCpj_E) "
+   ],
    "metadata": {}
   },
   {
@@ -106,12 +205,52 @@
    "source": [],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    ">## Pros & Cons of Content based Filtering\r\n",
+    "\r\n",
+    "- New items are easy to add, calculate the item vector and we are good to go.\r\n",
+    "- Dont need historical data. Just need to have details about the item.\r\n",
+    "- Not related to popularity, so wider recommendations.\r\n",
+    "- Limited understanding about items may give bad results."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "orig_nbformat": 4,
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.7",
+   "mimetype": "text/x-python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "pygments_lexer": "ipython3",
+   "nbconvert_exporter": "python",
+   "file_extension": ".py"
+  },
+  "kernelspec": {
+   "name": "python3",
+   "display_name": "Python 3.9.7 64-bit"
+  },
+  "interpreter": {
+   "hash": "f1058ac39a4b5cc6a2d664bf07a90cc7a0b869b1d28e3e4a0289bda448411850"
   }
  },
  "nbformat": 4,
