Base loop implementation of Gibbs Sampling

--- a/Content based Filtering.ipynb
+++ b/Content based Filtering.ipynb
@@ -192,11 +192,185 @@
    "source": [
     "## LDA Implementation\r\n",
     "\r\n",
-    "Based on the following 2 youtube videos regarging the theory of LDA.\r\n",
+    "Based on the following 2 youtube videos regarging the theory of LDA and Gibbs Sampling.\r\n",
     "\r\n",
     "1. [First Video](https://www.youtube.com/watch?v=T05t-SqKArY)\r\n",
-    "2. [Second Video](https://www.youtube.com/watch?v=BaM1uiCpj_E) "
+    "2. [Second Video](https://www.youtube.com/watch?v=BaM1uiCpj_E) \r\n",
+    "\r\n",
+    "[Gibbs Sampling Explanation](https://ethen8181.github.io/machine-learning/clustering_old/topic_model/LDA.html#latent-dirichlet-allocation)  --> This is very good article/implementation details on Gibbs sampling for LDA."
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "source": [
+    "documents =[ \"my name is dilan\", \r\n",
+    "             \"my name is dinushka\", \r\n",
+    "             \"I suck at statistics.\", \r\n",
+    "             \"I love my dog very much\"]\r\n",
+    "\r\n",
+    "tokenized_documents = [doc.split(\" \") for doc in documents]\r\n",
+    "vocabulary = set()\r\n",
+    "token2index = {}\r\n",
+    "i = 0\r\n",
+    "for doc in tokenized_documents:\r\n",
+    "    for token in doc:\r\n",
+    "        vocabulary.add(token)\r\n",
+    "        if(token not in token2index.keys()):\r\n",
+    "            token2index[token] = i\r\n",
+    "            i += 1\r\n",
+    "\r\n",
+    "import numpy as np\r\n",
+    "from random import choice, choices\r\n",
+    "    \r\n",
+    "\r\n",
+    "k = 3 # num of topics\r\n",
+    "\r\n",
+    "\r\n",
+    "word_topic = np.zeros((k, len(vocabulary)))\r\n",
+    "document_topic = np.zeros((len(tokenized_documents), k))\r\n",
+    "\r\n",
+    "\r\n",
+    "# Randomly assign a topic to word in the document and\r\n",
+    "# updating the related counts in word_topic and document_topic matrices\r\n",
+    "topic_assignments = []\r\n",
+    "for doc in range(len(tokenized_documents)):\r\n",
+    "    topics = []\r\n",
+    "    for idx in range(len(tokenized_documents[doc])):\r\n",
+    "        topic_index = choice(range(k))\r\n",
+    "\r\n",
+    "        token = tokenized_documents[doc][idx]\r\n",
+    "        token_index = token2index[token]\r\n",
+    "\r\n",
+    "        topics.append(topic_index)\r\n",
+    "        word_topic[topic_index][token_index] += 1\r\n",
+    "        document_topic[doc][topic_index] += 1\r\n",
+    "\r\n",
+    "    topic_assignments.append(topics)\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "\r\n",
+    "print(topic_assignments)\r\n",
+    "print(\"-------------------------------\")\r\n",
+    "print(token2index.keys())\r\n",
+    "print(\"-------------------------------\")\r\n",
+    "print(word_topic)\r\n",
+    "print(\"-------------------------------\")\r\n",
+    "print(document_topic)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1, 0, 2, 1], [1, 2, 0, 1], [0, 2, 1, 1], [0, 1, 1, 2, 2, 0]]\n",
+      "-------------------------------\n",
+      "dict_keys(['my', 'name', 'is', 'dilan', 'dinushka', 'I', 'suck', 'at', 'statistics.', 'love', 'dog', 'very', 'much'])\n",
+      "-------------------------------\n",
+      "[[0. 1. 1. 0. 0. 2. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [3. 0. 0. 1. 1. 0. 0. 1. 1. 1. 0. 0. 0.]\n",
+      " [0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 1. 0.]]\n",
+      "-------------------------------\n",
+      "[[1. 2. 1.]\n",
+      " [1. 2. 1.]\n",
+      " [1. 2. 1.]\n",
+      " [2. 2. 2.]]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<center><image src=\"./images/LDA Gibbs 1.jpg\" width=\"650px\" /></center>\r\n",
+    "<center><image src=\"./images/LDA Gibbs 2.jpg\" width=\"500px\" /></center>"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "source": [
+    "from copy import deepcopy\r\n",
+    "\r\n",
+    "alpha = 1\r\n",
+    "beta = 1\r\n",
+    "\r\n",
+    "for doc_idx, token_lst in enumerate(topic_assignments):\r\n",
+    "    for token_idx, topic in enumerate(token_lst):\r\n",
+    "        token = tokenized_documents[doc_idx][token_idx]\r\n",
+    "        vocab_index = token2index[token]\r\n",
+    "        \r\n",
+    "        Cwt_Wij = deepcopy(word_topic[:, vocab_index])\r\n",
+    "        Cwt_Wij[topic] = Cwt_Wij[topic] - 1\r\n",
+    "\r\n",
+    "        Sum_Cwt_Wij = np.sum(word_topic, axis=1)\r\n",
+    "        Sum_Cwt_Wij[topic] = Sum_Cwt_Wij[topic] - 1\r\n",
+    "\r\n",
+    "        left = (Cwt_Wij + alpha)/(Sum_Cwt_Wij + (len(vocabulary)*beta))\r\n",
+    "\r\n",
+    "        Cdt_Dij = deepcopy(document_topic[doc_idx])\r\n",
+    "        Cdt_Dij[topic] = Cdt_Dij[topic] - 1\r\n",
+    "\r\n",
+    "        Sum_Cdt_Dij = np.sum(document_topic[doc_idx]) - 1\r\n",
+    "        right = (Cdt_Dij + alpha)/(Sum_Cdt_Dij + (k*alpha))\r\n",
+    "\r\n",
+    "        prob_dist = (left*right)/sum(left*right)\r\n",
+    "\r\n",
+    "        new_topic = np.random.choice(range(k), 1, p=prob_dist)\r\n",
+    "        print(topic, new_topic)\r\n",
+    "    \r\n",
+    "\r\n",
+    "\r\n",
+    "# Just remember after drawing the new topic we also have to update the\r\n",
+    "# topic assignment list with newly sampled topic for token w; re-increment the word-topic \r\n",
+    "# and document-topic count matrices with the new sampled topic for token w.\r\n",
+    "\r\n",
+    "\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 [0]\n",
+      "0 [1]\n",
+      "2 [0]\n",
+      "1 [2]\n",
+      "1 [1]\n",
+      "2 [0]\n",
+      "0 [2]\n",
+      "1 [0]\n",
+      "0 [2]\n",
+      "2 [1]\n",
+      "1 [2]\n",
+      "1 [0]\n",
+      "0 [2]\n",
+      "1 [2]\n",
+      "1 [2]\n",
+      "2 [0]\n",
+      "2 [2]\n",
+      "0 [2]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -226,8 +400,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
