--- a/Content based Filtering.ipynb
+++ b/Content based Filtering.ipynb
@@ -203,80 +203,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 176,
+   "source": [
+    "def build_vocab(documents):\r\n",
+    "    tokenized_documents = [doc.split(\" \") for doc in documents]\r\n",
+    "    vocabulary = set()\r\n",
+    "    token2index = {}\r\n",
+    "    i = 0\r\n",
+    "    for doc in tokenized_documents:\r\n",
+    "        for token in doc:\r\n",
+    "            vocabulary.add(token)\r\n",
+    "            if(token not in token2index.keys()):\r\n",
+    "                token2index[token] = i\r\n",
+    "                i += 1\r\n",
+    "    return tokenized_documents, vocabulary, token2index"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "source": [
+    "def random_topic_assignment(tokenized_documents, k, token2index, word_topic, document_topic):\r\n",
+    "    from random import choice\r\n",
+    "\r\n",
+    "    topic_assignments = []\r\n",
+    "    for doc in range(len(tokenized_documents)):\r\n",
+    "        topics = []\r\n",
+    "        for idx in range(len(tokenized_documents[doc])):\r\n",
+    "            topic_index = choice(range(k))\r\n",
+    "\r\n",
+    "            token = tokenized_documents[doc][idx]\r\n",
+    "            token_index = token2index[token]\r\n",
+    "\r\n",
+    "            topics.append(topic_index)\r\n",
+    "            word_topic[topic_index][token_index] += 1\r\n",
+    "            document_topic[doc][topic_index] += 1\r\n",
+    "\r\n",
+    "        topic_assignments.append(topics)\r\n",
+    "\r\n",
+    "    return topic_assignments"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "source": [
+    "def LDA_Training(documents, k=3, iterations = 1000, alpha=1, beta=1):\r\n",
+    "    import numpy as np\r\n",
+    "    \r\n",
+    "    tokenized_documents, vocabulary, token2index = build_vocab(documents)\r\n",
+    "\r\n",
+    "    # Building Initial matrices\r\n",
+    "    word_topic = np.zeros((k, len(vocabulary)))\r\n",
+    "    document_topic = np.zeros((len(tokenized_documents), k))\r\n",
+    "\r\n",
+    "\r\n",
+    "    # Randomly assign a topic to word in the document for the initialization of LDA\r\n",
+    "    topic_assignments = random_topic_assignment(tokenized_documents, k,\r\n",
+    "                                                token2index, word_topic, document_topic)\r\n",
+    "\r\n",
+    "    # Gibbs sampling for LDA training (Related maths parts are below.)\r\n",
+    "    for iter in range(iterations):\r\n",
+    "        for doc_idx, token_lst in enumerate(topic_assignments):\r\n",
+    "            for token_idx, topic in enumerate(token_lst):\r\n",
+    "                token = tokenized_documents[doc_idx][token_idx]\r\n",
+    "                vocab_index = token2index[token]\r\n",
+    "                \r\n",
+    "                Cwt_Wij = word_topic[:, vocab_index]\r\n",
+    "                Cwt_Wij[topic] = Cwt_Wij[topic] - 1\r\n",
+    "\r\n",
+    "                Sum_Cwt_Wij = np.sum(word_topic, axis=1)\r\n",
+    "                Sum_Cwt_Wij[topic] = Sum_Cwt_Wij[topic] - 1\r\n",
+    "\r\n",
+    "                left = (Cwt_Wij + beta)/(Sum_Cwt_Wij + (len(vocabulary)*beta))\r\n",
+    "\r\n",
+    "                Cdt_Dij = document_topic[doc_idx]\r\n",
+    "                Cdt_Dij[topic] = Cdt_Dij[topic] - 1\r\n",
+    "\r\n",
+    "                Sum_Cdt_Dij = np.sum(document_topic[doc_idx]) - 1\r\n",
+    "                right = (Cdt_Dij + alpha)/(Sum_Cdt_Dij + (k*alpha))\r\n",
+    "\r\n",
+    "                prob_dist = (left*right)/sum(left*right)\r\n",
+    "\r\n",
+    "                new_topic = np.random.choice(range(k), 1, p=prob_dist)\r\n",
+    "\r\n",
+    "                # Reupdating the matrices with the new sampled topic\r\n",
+    "                topic_assignments[doc_idx][token_idx] = new_topic[0]\r\n",
+    "                word_topic[:, vocab_index][new_topic] += 1\r\n",
+    "                document_topic[doc_idx][new_topic] += 1\r\n",
+    "\r\n",
+    "    phi = (word_topic + beta)/(np.reshape(np.sum(word_topic, axis=1), (k,1)) + (len(vocabulary)*beta))\r\n",
+    "    theta = (document_topic + alpha)/(np.reshape(np.sum(document_topic, axis=1), (len(documents),1)) + (k*alpha))\r\n",
+    "\r\n",
+    "    class LDA(object):\r\n",
+    "        pass\r\n",
+    "    \r\n",
+    "    lda = LDA()\r\n",
+    "    lda.word_topic = word_topic\r\n",
+    "    lda.document_topic = document_topic\r\n",
+    "    lda.topic_assignments = topic_assignments\r\n",
+    "    lda.vocabulary = token2index\r\n",
+    "    lda.word_topic_distibution = np.squeeze(phi)\r\n",
+    "    lda.document_topic_distribution = np.squeeze(theta)\r\n",
+    "    lda.k = k\r\n",
+    "    \r\n",
+    "    return lda"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "source": [
+    "def get_details(model, documents, doc_id, related_word_count=3):\r\n",
+    "    import numpy as np\r\n",
+    "\r\n",
+    "    topic_distribution = model.document_topic_distribution[doc_id]\r\n",
+    "    print(\"Document\", documents[doc_id])\r\n",
+    "    print(\"Document topic distribution: \", topic_distribution)\r\n",
+    "\r\n",
+    "    idx2token = res = dict((v,k) for k,v in model.vocabulary.items())\r\n",
+    "\r\n",
+    "    related_words_distribution = model.word_topic_distibution[np.argmax(topic_distribution)]\r\n",
+    "    words = []\r\n",
+    "    for i in np.argsort(related_words_distribution)[-related_word_count:]:\r\n",
+    "        words.append(idx2token[i])\r\n",
+    "\r\n",
+    "    print(\"Top words for the dominent topics:\", words)\r\n",
+    "\r\n",
+    "    return\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "source": [
+    "def cluster_documents(model, documents):\r\n",
+    "    import numpy as np\r\n",
+    "\r\n",
+    "    clusters = [[] for _ in range(model.k)]\r\n",
+    "    for i in range(len(documents)):\r\n",
+    "        topic_distribution = model.document_topic_distribution[i]\r\n",
+    "        topic = np.argmax(topic_distribution)\r\n",
+    "        clusters[topic].append(documents[i])\r\n",
+    "\r\n",
+    "    for idx, clst in enumerate(clusters):\r\n",
+    "        print(\"Cluster\", idx)\r\n",
+    "        print(clst)\r\n",
+    "        print()\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "source": [
     "documents =[ \"my name is dilan\", \r\n",
-    "             \"my name is dinushka\", \r\n",
-    "             \"I suck at statistics.\", \r\n",
-    "             \"I love my dog very much\"]\r\n",
+    "             \"my name is dinushka\",\r\n",
+    "             \"my name is senarath\",\r\n",
+    "             \"my name is Sheero\",\r\n",
+    "             \"I love my dog very much\",\r\n",
+    "             \"my dog eat meat\",\r\n",
+    "             \"my dog loves runnning.\", \r\n",
+    "             \"my dog love to eat meat\",\r\n",
+    "             \"statisics is a great subject\",\r\n",
+    "             \"statistics is very hard\",\r\n",
+    "             \"I love to do statistics\",\r\n",
+    "             \"i suck at statistics\"\r\n",
+    "             ]\r\n",
     "\r\n",
-    "tokenized_documents = [doc.split(\" \") for doc in documents]\r\n",
-    "vocabulary = set()\r\n",
-    "token2index = {}\r\n",
-    "i = 0\r\n",
-    "for doc in tokenized_documents:\r\n",
-    "    for token in doc:\r\n",
-    "        vocabulary.add(token)\r\n",
-    "        if(token not in token2index.keys()):\r\n",
-    "            token2index[token] = i\r\n",
-    "            i += 1\r\n",
+    "model = LDA_Training(documents, k=3, alpha=0.01, beta=0.1)\r\n",
     "\r\n",
-    "import numpy as np\r\n",
-    "from random import choice, choices\r\n",
-    "    \r\n",
-    "\r\n",
-    "k = 3 # num of topics\r\n",
-    "\r\n",
-    "\r\n",
-    "word_topic = np.zeros((k, len(vocabulary)))\r\n",
-    "document_topic = np.zeros((len(tokenized_documents), k))\r\n",
-    "\r\n",
-    "\r\n",
-    "# Randomly assign a topic to word in the document and\r\n",
-    "# updating the related counts in word_topic and document_topic matrices\r\n",
-    "topic_assignments = []\r\n",
-    "for doc in range(len(tokenized_documents)):\r\n",
-    "    topics = []\r\n",
-    "    for idx in range(len(tokenized_documents[doc])):\r\n",
-    "        topic_index = choice(range(k))\r\n",
-    "\r\n",
-    "        token = tokenized_documents[doc][idx]\r\n",
-    "        token_index = token2index[token]\r\n",
-    "\r\n",
-    "        topics.append(topic_index)\r\n",
-    "        word_topic[topic_index][token_index] += 1\r\n",
-    "        document_topic[doc][topic_index] += 1\r\n",
-    "\r\n",
-    "    topic_assignments.append(topics)\r\n",
-    "\r\n",
-    "\r\n",
-    "\r\n",
-    "\r\n",
-    "print(topic_assignments)\r\n",
-    "print(\"-------------------------------\")\r\n",
-    "print(token2index.keys())\r\n",
-    "print(\"-------------------------------\")\r\n",
-    "print(word_topic)\r\n",
-    "print(\"-------------------------------\")\r\n",
-    "print(document_topic)"
+    "cluster_documents(model, documents)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[1, 0, 2, 1], [1, 2, 0, 1], [0, 2, 1, 1], [0, 1, 1, 2, 2, 0]]\n",
-      "-------------------------------\n",
-      "dict_keys(['my', 'name', 'is', 'dilan', 'dinushka', 'I', 'suck', 'at', 'statistics.', 'love', 'dog', 'very', 'much'])\n",
-      "-------------------------------\n",
-      "[[0. 1. 1. 0. 0. 2. 0. 0. 0. 0. 0. 0. 1.]\n",
-      " [3. 0. 0. 1. 1. 0. 0. 1. 1. 1. 0. 0. 0.]\n",
-      " [0. 1. 1. 0. 0. 0. 1. 0. 0. 0. 1. 1. 0.]]\n",
-      "-------------------------------\n",
-      "[[1. 2. 1.]\n",
-      " [1. 2. 1.]\n",
-      " [1. 2. 1.]\n",
-      " [2. 2. 2.]]\n"
+      "Cluster 0\n",
+      "['my name is dilan', 'my name is dinushka', 'my name is senarath', 'my name is Sheero', 'statisics is a great subject']\n",
+      "\n",
+      "Cluster 1\n",
+      "['statistics is very hard', 'I love to do statistics', 'i suck at statistics']\n",
+      "\n",
+      "Cluster 2\n",
+      "['I love my dog very much', 'my dog eat meat', 'my dog loves runnning.', 'my dog love to eat meat']\n",
+      "\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "source": [
+    "get_details(model, documents, 9)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Document statistics is very hard\n",
+      "Document topic distribution:  [0.00248139 0.99503722 0.00248139]\n",
+      "Top words for the dominent topics: ['is', 'at', 'statistics']\n"
      ]
     }
    ],
@@ -285,106 +426,18 @@
   {
    "cell_type": "markdown",
    "source": [
+    "As we can see LDA modelling can be used to clustering data and further analysis on probablities will help to get an understanding about the clusters as well."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Below is the Gibbs sampling for LDA equations that have been used in the above function. Note that some values are not self explanatory, so please check with the code to see. May be wrong from my end as well. ;()\r\n",
+    "\r\n",
     "<center><image src=\"./images/LDA Gibbs 1.jpg\" width=\"650px\" /></center>\r\n",
     "<center><image src=\"./images/LDA Gibbs 2.jpg\" width=\"500px\" /></center>"
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "source": [
-    "from copy import deepcopy\r\n",
-    "\r\n",
-    "alpha = 1\r\n",
-    "beta = 1\r\n",
-    "\r\n",
-    "for doc_idx, token_lst in enumerate(topic_assignments):\r\n",
-    "    for token_idx, topic in enumerate(token_lst):\r\n",
-    "        token = tokenized_documents[doc_idx][token_idx]\r\n",
-    "        vocab_index = token2index[token]\r\n",
-    "        \r\n",
-    "        Cwt_Wij = deepcopy(word_topic[:, vocab_index])\r\n",
-    "        Cwt_Wij[topic] = Cwt_Wij[topic] - 1\r\n",
-    "\r\n",
-    "        Sum_Cwt_Wij = np.sum(word_topic, axis=1)\r\n",
-    "        Sum_Cwt_Wij[topic] = Sum_Cwt_Wij[topic] - 1\r\n",
-    "\r\n",
-    "        left = (Cwt_Wij + alpha)/(Sum_Cwt_Wij + (len(vocabulary)*beta))\r\n",
-    "\r\n",
-    "        Cdt_Dij = deepcopy(document_topic[doc_idx])\r\n",
-    "        Cdt_Dij[topic] = Cdt_Dij[topic] - 1\r\n",
-    "\r\n",
-    "        Sum_Cdt_Dij = np.sum(document_topic[doc_idx]) - 1\r\n",
-    "        right = (Cdt_Dij + alpha)/(Sum_Cdt_Dij + (k*alpha))\r\n",
-    "\r\n",
-    "        prob_dist = (left*right)/sum(left*right)\r\n",
-    "\r\n",
-    "        new_topic = np.random.choice(range(k), 1, p=prob_dist)\r\n",
-    "        print(topic, new_topic)\r\n",
-    "    \r\n",
-    "\r\n",
-    "\r\n",
-    "# Just remember after drawing the new topic we also have to update the\r\n",
-    "# topic assignment list with newly sampled topic for token w; re-increment the word-topic \r\n",
-    "# and document-topic count matrices with the new sampled topic for token w.\r\n",
-    "\r\n",
-    "\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1 [0]\n",
-      "0 [1]\n",
-      "2 [0]\n",
-      "1 [2]\n",
-      "1 [1]\n",
-      "2 [0]\n",
-      "0 [2]\n",
-      "1 [0]\n",
-      "0 [2]\n",
-      "2 [1]\n",
-      "1 [2]\n",
-      "1 [0]\n",
-      "0 [2]\n",
-      "1 [2]\n",
-      "1 [2]\n",
-      "2 [0]\n",
-      "2 [2]\n",
-      "0 [2]\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
